--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2112,8 +2112,8 @@ then {11,99 TRY/Month}*/
 "contact_us_complaint_cellfie" = "Спасибо, что обратились к нам. Ваш запрос был перенаправлен в Cellfie Mobile для рассмотрения. Мы поделимся с ними любой необходимой информацией, которую вы предоставите, такой как информация о вашем устройстве, информация об использовании lifebox, контактная информация и личная информация для расследования проблемы. Фотографии/видео и другой контент, который вы загружаете в lifebox, не будут доступны Cellfire Mobile.";
 "Office_Filter_Not_Found" = "Файл, который вы пытались отфильтровать (%@), не найден.";
 "new_print" = "Создать Новую Печать";
-"print_info_popup_title" = "Выберите 5 Фотографий";
-"print_info_popup_subtitle" = "Выберите до 5 фотографий для печати в этом месяце и получите их на дом.";
+"print_info_popup_title" = "Выберите %d Фотографий";
+"print_info_popup_subtitle" = "Выберите до %d фотографий для печати в этом месяце и получите их на дом.";
 "print_info_popup_checkbox" = "Больше не показывать это предупреждение.";
 "print_select_photo_button" = "Выбрать Фотографию";
 "print_select_photo_screen" = "Выбрать Фотографию";
@@ -2193,3 +2193,15 @@ then {11,99 TRY/Month}*/
 "print_receipt_name_placeholder" = "";
 "min_posta_code" = "";
 "errorcode_5111" = "";
+"address_not_found" = "";
+"address_city_not_found" = "";
+"address_district_not_found" = "";
+"address_book_not_found" = "";
+"address_book_max_limit" = "";
+"print_page_name" = "";
+"foryou_print_title" = "";
+"foryou_print_body" = "";
+"print_package_title" = "";
+"print_package_detail" = "";
+"print_package" = "";
+"print_package_info" = "";
