--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2098,8 +2098,8 @@ then {11,99 TRY/Month}*/
 "contact_us_complaint_cellfie" = "Vă mulțumim că ne-ați contactat. Cererea dvs. a fost transmis la Cellfie Mobile pentru examinare. Vom împărtăși cu ei orice informații necesare pe care le furnizați, cum ar fi informații despre dispozitivul dvs., informații despre utilizarea lifebox, informații de contact și informații personale pentru a investiga problema. Fotografiile/videoclipurile și alt conținut pe care îl încărcați în lifebox nu vor fi partajate cu Cellfire Mobile.";
 "Office_Filter_Not_Found" = "Fișierul pe care ați încercat să îl filtrați (%@) nu a fost găsit.";
 "new_print" = "Creați o Nouă İmprimare";
-"print_info_popup_title" = "Selectați 5 Fotografii";
-"print_info_popup_subtitle" = "Alege până la 5 fotografii pe care să le tipărești luna aceasta și să le primești la domiciliu.";
+"print_info_popup_title" = "Selectați %d Fotografii";
+"print_info_popup_subtitle" = "Alege până la %d fotografii pe care să le tipărești luna aceasta și să le primești la domiciliu.";
 "print_info_popup_checkbox" = "Nu mai afișați acest avertisment.";
 "print_select_photo_button" = "Selectați Fotografia";
 "print_select_photo_screen" = "Selectați Fotografia";
@@ -2179,3 +2179,15 @@ then {11,99 TRY/Month}*/
 "print_receipt_name_placeholder" = "";
 "min_posta_code" = "";
 "errorcode_5111" = "";
+"address_not_found" = "";
+"address_city_not_found" = "";
+"address_district_not_found" = "";
+"address_book_not_found" = "";
+"address_book_max_limit" = "";
+"print_page_name" = "";
+"foryou_print_title" = "";
+"foryou_print_body" = "";
+"print_package_title" = "";
+"print_package_detail" = "";
+"print_package" = "";
+"print_package_info" = "";
