LB-5318 photo print plus button label added

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2148,7 +2148,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "إرسال للطباعة";
 "add_address" = "إضافة عنوان";
 "send_print_popup_title" = "الصور التي قمت بتحديدها جاهزة للطباعة";
-"send_print_popup_address" = "سيتم إرسال الصور المطبوعة إلى العنوان \"%@ ربع %@ شارع رقم.:%@ شقة:%@ %@/%@, %d\".";
+"send_print_popup_address" = "سيتم إرسال الصور المطبوعة مجانا إلى العنوان \"%@ ربع %@ شارع رقم: %@ شقة:%@ %@/%@, %d\".";
 "send_print_popup_info" = "بعد إرسالها للطباعة ، لا يمكن إلغاء هذه العملية.";
 "address_title" = "أدخل عنوان العنوان";
 "address_city" = "مدينة";
@@ -2170,7 +2170,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_no_address" = "ليس لديك عنوان محفوظ.";
 "grace_banner_text_paycell" = "لتحديث lifebox الحزمة ، تحقق من رصيد بطاقة Paycell وتأكد من أنها مفتوحة للتجارة الإلكترونية. يمكنك شراء الحزمة ببطاقة ائتمان أخرى أو من خلال التطبيق.";
 "toast_message_delete_notification" = "قد تستغرق هذه العملية وقتًا اعتمادًا على عدد الملفات المختارة";
-"order_approved" = "تمت الموافقة على طلبك";
+"order_approved" = "طلبك تلقى";
 "print_card_title" = "حزمة الطباعة الخاصة بالنسبة لك";
 "print_card_body" = "5 مطبوعات للصور شهريا + 50 جيجابايت من مساحة القرص كهدية";
 "order_in_progress" = "طلبك قيد التقدم";
@@ -2187,19 +2187,19 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo_detail" = "تم نقل طلب الطباعة الخاص بك إلى حملة الشحن للتسليم.";
 "order_delivered_detail" = "تم تسليم طلب الطباعة الخاص بك.";
 "order_undelivered_detail" = "تعذر تسليم طلب الطباعة الخاص بك.";
-"print_receipt_name" = "";
-"print_receipt_name_placeholder" = "";
-"min_posta_code" = "";
+"print_receipt_name" = "الاسم اللقب";
+"print_receipt_name_placeholder" = "الاسم واللقب";
+"min_posta_code" = "\"لا يمكن أن يكون الرمز البريدي أصغر من 10000.\"";
 "errorcode_5111" = "";
-"address_not_found" = "";
-"address_city_not_found" = "";
-"address_district_not_found" = "";
-"address_book_not_found" = "";
-"address_book_max_limit" = "";
-"print_page_name" = "";
-"foryou_print_title" = "";
-"foryou_print_body" = "";
+"address_not_found" = "لم يتم العثور على العنوان.";
+"address_city_not_found" = "لم يتم العثور على المدينة.";
+"address_district_not_found" = "منطقة غير موجود.";
+"address_book_not_found" = "لم يتم العثور على دفتر العناوين.";
+"address_book_max_limit" = "لا يمكنك إضافة المزيد من العناوين.";
+"print_page_name" = "حزمة الطباعة الخاصة بي";
+"foryou_print_title" = "طباعة الصور الخاصة بك";
+"foryou_print_body" = "طباعة %d الصور كل شهر.";
 "print_package_title" = "";
-"print_package_detail" = "";
-"print_package" = "";
-"print_package_info" = "";
+"print_package_detail" = "5 قطع من 10 * 15 صورة مطبوعة";
+"print_package" = "طباعة الحزمة";
+"print_package_info" = "طباعة الصور + التخزين";
