--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2136,7 +2136,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "Zum Drucken Senden";
 "add_address" = "Adresse Hinzufügen";
 "send_print_popup_title" = "Ihre ausgewählten Fotos sind bereit zum Drucken";
-"send_print_popup_address" = "Die gedruckten Fotos werden an die Adresse \"%@ Viertel %@ Straße:%@ Wohnung:%@ %@/%@, %d\" gesendet.";
+"send_print_popup_address" = "Die gedruckten Fotos werden kostenlos an die Adresse \"%@ Viertel %@ Straße Nr:%@ Wohnung:%@ %@/%@, %d\" geschickt.";
 "send_print_popup_info" = "Dieser Vorgang kann nicht mehr rückgängig gemacht werden, sobald er zum Druck gesendet wurde.";
 "address_title" = "Adresse Titel";
 "address_city" = "Stadt";
@@ -2158,7 +2158,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_no_address" = "Sie haben keine gespeicherte Adresse.";
 "grace_banner_text_paycell" = "Um Ihr lifebox-Paket aufzurüsten, überprüfen Sie Ihr Paycell-Kartenguthaben und stellen Sie sicher, dass es für den elektronischen Handel offen ist. Sie können das Paket mit einer anderen Kreditkarte oder über die App kaufen.";
 "toast_message_delete_notification" = "Dieser Vorgang kann je nach Anzahl der ausgewählten Dateien einige Zeit in Anspruch nehmen.";
-"order_approved" = "Ihr Auftrag Genehmigt";
+"order_approved" = "Ihre Bestellung wird angenommen";
 "print_card_title" = "Spezielles Druckpaket für Sie";
 "print_card_body" = "5 Fotodrucke pro Monat + 50 GB Speicherplatz als Geschenk";
 "order_in_progress" = "Ihre Bestellung befindet sich im Abwicklungsprozess";
@@ -2175,19 +2175,19 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo_detail" = "Ihr Druckauftrag wurde zur Auslieferung an die Fracht geschickt.";
 "order_delivered_detail" = "Ihr Druckauftrag wurde ausgeliefert.";
 "order_undelivered_detail" = "Ihr Druckauftrag konnte nicht zugestellt werden.";
-"print_receipt_name" = "";
-"print_receipt_name_placeholder" = "";
-"min_posta_code" = "";
+"print_receipt_name" = "Name Nachname";
+"print_receipt_name_placeholder" = "Name & Nachname";
+"min_posta_code" = "\"Die Postleitzahl kann nicht kleiner als 10000 sein.\"";
 "errorcode_5111" = "";
-"address_not_found" = "";
-"address_city_not_found" = "";
-"address_district_not_found" = "";
-"address_book_not_found" = "";
-"address_book_max_limit" = "";
-"print_page_name" = "";
-"foryou_print_title" = "";
-"foryou_print_body" = "";
+"address_not_found" = "Keine Adresse gefunden.";
+"address_city_not_found" = "Stadt nicht gefunden.";
+"address_district_not_found" = "Bezirk nicht gefunden.";
+"address_book_not_found" = "Adressbuch nicht gefunden.";
+"address_book_max_limit" = "Sie können keine weiteren Adressen hinzufügen.";
+"print_page_name" = "Mein Druckpaket";
+"foryou_print_title" = "Drucken Sie Ihre Fotos";
+"foryou_print_body" = "Drucken Sie jeden Monat %d Fotos.";
 "print_package_title" = "";
-"print_package_detail" = "";
-"print_package" = "";
-"print_package_info" = "";
+"print_package_detail" = "5 Stück 10x15 Fotodrucke";
+"print_package" = "Druck-Paket";
+"print_package_info" = "Fotodruck + Lagerung";
