--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2198,7 +2198,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "Send to Print";
 "add_address" = "Add Address";
 "send_print_popup_title" = "Your Selected Photos Are Ready For Printing";
-"send_print_popup_address" = "Printed photographs will be sent to the address \"%@ Quarter %@ Street No:%@ Apartment:%@ %@/%@, %d\".";
+"send_print_popup_address" = "Printed photographs will be sent free of charge to the address \"%@ Quarter %@ Street No:%@ Apartment:%@ %@/%@, %d\".";
 "send_print_popup_info" = "This process cannot be cancelled if it is sent for printing.";
 "address_title" = "Address Title";
 "address_city" = "City";
@@ -2220,7 +2220,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_no_address" = "You do not have a saved address.";
 "grace_banner_text_paycell" = "To renew your lifebox package, check your Paycell card balance and that card is open for electronic commerce. You can purchase a package with a different credit card or through the application.";
 "toast_message_delete_notification" = "This process may take time depending on the number of files selected.";
-"order_approved" = "Your Order Approved";
+"order_approved" = "Your Order Received";
 "print_card_title" = "Special Print Package for You";
 "print_card_body" = "5 photo prints per month +50GB storage space for free";
 "order_in_progress" = "Your Order In Progress";
@@ -2237,19 +2237,19 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo_detail" = "Your print order is sent to the cargo for delivery.";
 "order_delivered_detail" = "Your print order is delivered.";
 "order_undelivered_detail" = "Your print order could not be delivered.";
-"print_receipt_name" = "";
-"print_receipt_name_placeholder" = "";
-"min_posta_code" = "";
+"print_receipt_name" = "Name Surname";
+"print_receipt_name_placeholder" = "Name & Surname";
+"min_posta_code" = "\"Postcode cannot be smaller than 10000.\"";
 "errorcode_5111" = "";
-"address_not_found" = "";
-"address_city_not_found" = "";
-"address_district_not_found" = "";
-"address_book_not_found" = "";
-"address_book_max_limit" = "";
-"print_page_name" = "";
-"foryou_print_title" = "";
-"foryou_print_body" = "";
+"address_not_found" = "Address not found.";
+"address_city_not_found" = "City not found.";
+"address_district_not_found" = "District not found.";
+"address_book_not_found" = "Address Book not found.";
+"address_book_max_limit" = "You cannot add more addresses.";
+"print_page_name" = "My Print Package";
+"foryou_print_title" = "Print Your Photos";
+"foryou_print_body" = "Print %d photos each month.";
 "print_package_title" = "";
-"print_package_detail" = "";
-"print_package" = "";
-"print_package_info" = "";
+"print_package_detail" = "5 Piece of 10x15 Photo Print";
+"print_package" = "Print Package";
+"print_package_info" = "Photo Printing + Storage";
