--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2178,7 +2178,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "Enviar a Imprimir";
 "add_address" = "Añadir Dirección";
 "send_print_popup_title" = "Sus fotos seleccionadas están listas para imprimir";
-"send_print_popup_address" = "Las fotos impresas se enviarán a \"%@ Barrio %@ Calle Nº:%@ Apartamento:%@ %@/%@, %d\".";
+"send_print_popup_address" = "Las fotografías impresas se enviarán gratuitamente a la dirección \"%@ Barrio %@ Calle No:%@ Apartamento:%@ %@/%@, %d\".";
 "send_print_popup_info" = "Una vez enviadas a imprimir, este proceso no se puede cancelar.";
 "address_title" = "Dirección Título";
 "address_city" = "Ciudad";
@@ -2200,7 +2200,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_no_address" = "No tienes una dirección guardada.";
 "grace_banner_text_paycell" = "Para actualizar tu paquete lifebox, comprueba el saldo de tu tarjeta Paycell y asegúrate de que está abierta para el comercio electrónico. Puedes comprar el paquete con otra tarjeta de crédito o a través de la app.";
 "toast_message_delete_notification" = "Este proceso puede tardar dependiendo del número de archivos seleccionados.";
-"order_approved" = "Su Pedido Aprobado";
+"order_approved" = "Su Pedido Recibido";
 "print_card_title" = "Paquete de Imprimir especial para ti";
 "print_card_body" = "5 fotografías a imprimir al mes +50 GB de espacio de almacenamiento gratis";
 "order_in_progress" = "Su Pedido está en Proceso de Cumplimentación";
@@ -2217,19 +2217,19 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo_detail" = "Su pedido de imprimir ha sido transferido al servicio de entrega.";
 "order_delivered_detail" = "Su pedido de imprimir ha sido entregado.";
 "order_undelivered_detail" = "Su pedido de imprimir no ha podido ser entregado.";
-"print_receipt_name" = "";
-"print_receipt_name_placeholder" = "";
-"min_posta_code" = "";
+"print_receipt_name" = "Nombre y Apellidos";
+"print_receipt_name_placeholder" = "Nombre & Apellido";
+"min_posta_code" = "\"El código postal no puede ser inferior a 10000\".";
 "errorcode_5111" = "";
-"address_not_found" = "";
-"address_city_not_found" = "";
-"address_district_not_found" = "";
-"address_book_not_found" = "";
-"address_book_max_limit" = "";
-"print_page_name" = "";
-"foryou_print_title" = "";
-"foryou_print_body" = "";
+"address_not_found" = "Dirección no encontrada.";
+"address_city_not_found" = "Ciudad no encontrada.";
+"address_district_not_found" = "Distrito no encontrado.";
+"address_book_not_found" = "No se ha encontrado la libreta de direcciones.";
+"address_book_max_limit" = "No puede añadir más direcciones.";
+"print_page_name" = "Mi Paquete de Imprimir";
+"foryou_print_title" = "Imprime Tus Fotos";
+"foryou_print_body" = "Imprima %d fotografías cada mes.";
 "print_package_title" = "";
-"print_package_detail" = "";
-"print_package" = "";
-"print_package_info" = "";
+"print_package_detail" = "5 Pieza de 10x15 Foto Imprimir";
+"print_package" = "Paquete de Imprimir";
+"print_package_info" = "Impresión de Fotos + Almacenamiento";
