--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2441,7 +2441,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "Envoyer à l'impression";
 "add_address" = "Ajouter une Adresse";
 "send_print_popup_title" = "Les photos sélectionnées sont prêtes à être imprimées";
-"send_print_popup_address" = "Les photos imprimées seront envoyées à l'adresse \"%@ Quartier %@ Rue No:%@ Appartement:%@ %@/%@, %d\".";
+"send_print_popup_address" = "Les photos imprimées seront envoyées gratuitement à l'adresse \"%@ Quarter %@ Rue No:%@ Appartement:%@ %@/%@, %d\".";
 "send_print_popup_info" = "Il n'est pas possible d'annuler ce processus lorsqu'il est envoyé à l'impression.";
 "address_title" = "Adresse Titre";
 "address_city" = "Ville";
@@ -2463,7 +2463,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_no_address" = "Vous n'avez pas d'adresse enregistrée.";
 "grace_banner_text_paycell" = "Pour renouveler votre pack lifebox, vérifiez le solde de votre carte Paycell et que cette carte est ouverte au commerce électronique. Vous pouvez acheter un paquet avec une autre carte de crédit ou par l'intermédiaire de l'application.";
 "toast_message_delete_notification" = "Ce processus peut prendre du temps en fonction du nombre de fichiers sélectionnés.";
-"order_approved" = "Votre commande approuvée";
+"order_approved" = "Votre Commande Reçue";
 "print_card_title" = "Forfait d'impression spécial pour vous";
 "print_card_body" = "5 impressions de photos par mois + 50 Go d'espace de stockage en cadeau";
 "order_in_progress" = "Votre commande est en cours d'exécution";
@@ -2480,19 +2480,19 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo_detail" = "Votre commande d'impression a été expédiée pour livraison.";
 "order_delivered_detail" = "Votre commande d'impression a été livrée.";
 "order_undelivered_detail" = "Votre commande d'impression n'a pas pu être livrée.";
-"print_receipt_name" = "";
-"print_receipt_name_placeholder" = "";
-"min_posta_code" = "";
+"print_receipt_name" = "Nom et Prénom";
+"print_receipt_name_placeholder" = "Nom & Prénom";
+"min_posta_code" = "\"Le Code Postal ne peut être inférieur à 10000.\"";
 "errorcode_5111" = "";
-"address_not_found" = "";
-"address_city_not_found" = "";
-"address_district_not_found" = "";
-"address_book_not_found" = "";
-"address_book_max_limit" = "";
-"print_page_name" = "";
-"foryou_print_title" = "";
-"foryou_print_body" = "";
+"address_not_found" = "Adresse non trouvée.";
+"address_city_not_found" = "Ville non trouvée.";
+"address_district_not_found" = "District non trouvé.";
+"address_book_not_found" = "Impossible de trouver le carnet d'adresses.";
+"address_book_max_limit" = "Vous ne pouvez pas ajouter d'adresses.";
+"print_page_name" = "Mon Pack Impression";
+"foryou_print_title" = "Imprimez Vos Photos";
+"foryou_print_body" = "Imprimez %d photos chaque mois.";
 "print_package_title" = "";
-"print_package_detail" = "";
-"print_package" = "";
-"print_package_info" = "";
+"print_package_detail" = "5 Pièces 10x15 Photo Impression";
+"print_package" = "Pack d'impression";
+"print_package_info" = "Impression de Photos + Stockage";
