--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2179,7 +2179,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "Dërgo Për Të Shtypur";
 "add_address" = "Shtoni Adresën";
 "send_print_popup_title" = "Fotot Tuaja Të Zgjedhura Janë Gati Për Shtypje";
-"send_print_popup_address" = "Fotografitë e shtypura do të dërgohen në adresën \"%@ Tremujori %@ Rruga Nr:%@ Apartamenti:%@ %@/%@, %d\".";
+"send_print_popup_address" = "Fotografitë e printuara do të dërgohen pa pagesë në adresën \"%@ Tremujori %@ Rruga Nr:%@ Apartament:%@ %@/%@, %d\".";
 "send_print_popup_info" = "Pasi të dërgohet në shtyp, ky proces nuk mund të anulohet.";
 "address_title" = "Titulli I Adresës";
 "address_city" = "Qyteti";
@@ -2201,7 +2201,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_no_address" = "Ju nuk keni një adresë të ruajtur.";
 "grace_banner_text_paycell" = "Për të përmirësuar paketën lifebox, kontrolloni bilancin e kartës Suaj Paycell dhe sigurohuni që ajo të jetë e hapur për tregtinë elektronike. Ju mund ta blini paketën me një kartë krediti tjetër ose përmes aplikacionit.";
 "toast_message_delete_notification" = "Ky proces mund të marrë kohë në varësi të numrit të skedarëve të zgjedhur.";
-"order_approved" = "Urdhri Juaj Është Miratuar";
+"order_approved" = "Porosia Juaj E Marrë";
 "print_card_title" = "Paketë Speciale Printimi Për Ju";
 "print_card_body" = "5 printime fotografish në muaj +50 GB hapësirë ruajtëse falas";
 "order_in_progress" = "Porosia juaj Është Në Proces";
@@ -2218,19 +2218,19 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo_detail" = "Porosia juaj e printimit është dorëzuar në shërbimin e transportit për dërgesë.";
 "order_delivered_detail" = "Porosia juaj e printimit është dorëzuar.";
 "order_undelivered_detail" = "Porosia juaj e printimit nuk mund të dorëzohej.";
-"print_receipt_name" = "";
-"print_receipt_name_placeholder" = "";
-"min_posta_code" = "";
+"print_receipt_name" = "Emri Mbiemri";
+"print_receipt_name_placeholder" = "Emri & Mbiemri";
+"min_posta_code" = "\"Kodi postar nuk mund të jetë më i vogël se 10000.\"";
 "errorcode_5111" = "";
-"address_not_found" = "";
-"address_city_not_found" = "";
-"address_district_not_found" = "";
-"address_book_not_found" = "";
-"address_book_max_limit" = "";
-"print_page_name" = "";
-"foryou_print_title" = "";
-"foryou_print_body" = "";
+"address_not_found" = "Adresa nuk u gjet.";
+"address_city_not_found" = "Qyteti nuk u gjet.";
+"address_district_not_found" = "Distrikti nuk u gjet.";
+"address_book_not_found" = "Libri i Adresave nuk u gjet.";
+"address_book_max_limit" = "Nuk mund të shtoni më shumë adresa.";
+"print_page_name" = "Paketa Ime e Printimit";
+"foryou_print_title" = "Printoni Fotografitë Tuaja";
+"foryou_print_body" = "Printoni %d fotografi çdo muaj.";
 "print_package_title" = "";
-"print_package_detail" = "";
-"print_package" = "";
-"print_package_info" = "";
+"print_package_detail" = "5 Copë Printim Fotografish 10x15";
+"print_package" = "Paketën e Printimit";
+"print_package_info" = "Printim Fotosh + Ruajtje";
