--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2138,7 +2138,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "Відправити на Друк";
 "add_address" = "Додати Адресу";
 "send_print_popup_title" = "Обрані Вами Фотографії Готові до Друку";
-"send_print_popup_address" = "Роздруковані фотографії будуть відправлені за адресою \"%@ Квартал %@ Вулиця №:%@ Квартира:%@ %@/%@, %d\".";
+"send_print_popup_address" = "Роздруковані фотографії будуть безкоштовно надіслані на адресу \"%@ Квартал %@ Вулиця №:%@ Квартира:%@ %@/%@, %d\".";
 "send_print_popup_info" = "Після надсилання на друк цей процес не можна скасувати.";
 "address_title" = "Назва Адреси";
 "address_city" = "Город";
@@ -2160,7 +2160,7 @@ then {11,99 TRY/Month}*/
 "send_print_popup_no_address" = "У вас немає збереженої адреси.";
 "grace_banner_text_paycell" = "Щоб оновити пакет lifebox, перевірте баланс своєї картки Paycell і переконайтеся, що вона відкрита для електронної торгівлі. Ви можете придбати пакет за допомогою іншої кредитної картки або через додаток.";
 "toast_message_delete_notification" = "Цей процес може зайняти певний час, залежно від кількості вибраних файлів.";
-"order_approved" = "Ваше Замовлення Підтверджено";
+"order_approved" = "Ваше Замовлення Отримано";
 "print_card_title" = "Спеціальний Пакет Друку Для Вас";
 "print_card_body" = "5 роздруківок фотографій на місяць + 50 ГБ дискового простору в подарунок";
 "order_in_progress" = "Ваше Замовлення Готується";
@@ -2177,19 +2177,19 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo_detail" = "Ваше замовлення на друк було передано до служби доставки.";
 "order_delivered_detail" = "Ваше замовлення на друк доставлено.";
 "order_undelivered_detail" = "Ваше замовлення на друк не вдалося доставити.";
-"print_receipt_name" = "";
-"print_receipt_name_placeholder" = "";
-"min_posta_code" = "";
+"print_receipt_name" = "Ім'я Прізвище";
+"print_receipt_name_placeholder" = "Ім'я & Прізвище";
+"min_posta_code" = "\"Поштовий індекс не може бути меншим за 10000\".";
 "errorcode_5111" = "";
-"address_not_found" = "";
-"address_city_not_found" = "";
-"address_district_not_found" = "";
-"address_book_not_found" = "";
-"address_book_max_limit" = "";
-"print_page_name" = "";
-"foryou_print_title" = "";
-"foryou_print_body" = "";
+"address_not_found" = "Адреса не знайдена.";
+"address_city_not_found" = "Город не знайдено.";
+"address_district_not_found" = "Район не знайдено.";
+"address_book_not_found" = "Адресна Книга не знайдена.";
+"address_book_max_limit" = "Неможливо додати більше адрес.";
+"print_page_name" = "Мій Пакет Друку";
+"foryou_print_title" = "Друк Ваших Фотографій";
+"foryou_print_body" = "Друкуйте %d фотографій щомісяця.";
 "print_package_title" = "";
-"print_package_detail" = "";
-"print_package" = "";
-"print_package_info" = "";
+"print_package_detail" = "Друк Фотографій 5 Штук 10x15";
+"print_package" = "Пакет Друку";
+"print_package_info" = "Друк + Зберігання Фотографій";
